--- a/config/gespot.conf
+++ b/config/gespot.conf
@@ -5,7 +5,7 @@ server {
         root /opt/gespot/dist;
         index index.html;
 
-        server_name gespot.fr;
+        server_name gespot.fr www.gespot.fr;
         gzip on;
         gzip_proxied any;
         gzip_types application/x-protobuf application/json application/javascript;
