--- a/config/gespot.conf
+++ b/config/gespot.conf
@@ -23,7 +23,7 @@ server {
                 proxy_pass http://127.0.0.1:8081/maps/gespot;
         }
 
-        location ~ \.json$ {
+        location ~ \.(json|png|svg|css)$ {
                 add_header 'Access-Control-Allow-Origin' '*';
                 add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
         }
