--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "in-browser-language": "^1.0.3"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "bootstrap": "^4.5.0",
     "bootstrap-slider": "^11.0.2",
     "bootstrap4-toggle": "^3.6.1",
