--- a/package.json
+++ b/package.json
@@ -18,26 +18,26 @@
   },
   "homepage": "https://github.com/flacombe/gespot#readme",
   "devDependencies": {
-    "@babel/core": "^7.7.2",
-    "@babel/preset-env": "^7.7.1",
+    "@babel/core": "^7.12.3",
+    "@babel/preset-env": "^7.12.1",
     "@mapbox/spritezero": "^6.1.2",
     "babel-loader": "^8.0.6",
     "babel-preset-env": "^1.7.0",
     "clean-webpack-plugin": "^0.1.19",
-    "copy-webpack-plugin": "^5.0.5",
+    "copy-webpack-plugin": "^6.3.0",
     "css-loader": "^1.0.1",
     "html-webpack-plugin": "^3.2.0",
+    "in-browser-language": "^1.0.3",
+    "regenerator-runtime": "^0.13.7",
     "spritezero-webpack-plugin": "^0.1.1",
     "style-loader": "^0.23.1",
-    "uglifyjs-webpack-plugin": "^2.2.0",
-    "webpack": "^4.41.2",
-    "webpack-cli": "^3.3.10",
+    "webpack": "^4.44.2",
+    "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.9.0",
-    "webpack-merge": "^4.2.2",
-    "webpack-pwa-manifest": "^4.1.1",
-    "in-browser-language": "^1.0.3"
+    "webpack-merge": "^4.2.2"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "bootstrap": "^4.5.0",
     "bootstrap-slider": "^11.0.2",
     "bootstrap4-toggle": "^3.6.1",
@@ -45,9 +45,10 @@
     "lodash.invert": "^4.3.0",
     "lodash.isequal": "^4.5.0",
     "lodash.sortby": "^4.7.0",
-    "mapbox-gl": "^1.10.1",
+    "mapbox-gl": "^1.12.0",
+    "@mapbox/mapbox-gl-geocoder": "^4.7.0",
     "popper.js": "^1.16.1",
-    "redom": "^3.24.2",
+    "redom": "^3.27.1",
     "title-case": "^2.1.1"
   }
 }
