--- a/package.json
+++ b/package.json
@@ -46,7 +46,8 @@
     "lodash.invert": "^4.3.0",
     "lodash.isequal": "^4.5.0",
     "lodash.sortby": "^4.7.0",
-    "mapbox-gl": "^1.10.1",
+    "mapbox-gl": "^1.13.0",
+    "@mapbox/mapbox-gl-geocoder": "^4.7.0",
     "popper.js": "^1.16.1",
     "redom": "^3.24.2",
     "title-case": "^2.1.1"
