--- a/package.json
+++ b/package.json
@@ -24,18 +24,17 @@
     "babel-loader": "^8.0.6",
     "babel-preset-env": "^1.7.0",
     "clean-webpack-plugin": "^0.1.19",
-    "copy-webpack-plugin": "^5.0.5",
+    "copy-webpack-plugin": "^9.0.1",
     "css-loader": "^1.0.1",
-    "html-webpack-plugin": "^3.2.0",
+    "html-webpack-plugin": "^5.3.2",
+    "in-browser-language": "^1.0.3",
     "spritezero-webpack-plugin": "^0.1.1",
     "style-loader": "^0.23.1",
-    "uglifyjs-webpack-plugin": "^2.2.0",
-    "webpack": "^4.41.2",
+    "webpack": "^5.52.0",
     "webpack-cli": "^3.3.10",
-    "webpack-dev-server": "^3.9.0",
+    "webpack-dev-server": "^4.1.0",
     "webpack-merge": "^4.2.2",
-    "webpack-pwa-manifest": "^4.1.1",
-    "in-browser-language": "^1.0.3"
+    "webpack-pwa-manifest": "^4.3.0"
   },
   "dependencies": {
     "bootstrap": "^4.5.0",
