--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "lodash.isequal": "^4.5.0",
     "lodash.sortby": "^4.7.0",
     "maplibre-gl": "^2.4.0",
+    "popper.js": "^1.16.1",
     "redom": "^3.24.2",
     "title-case": "^2.1.1"
   }
